--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 body {
   background-color: antiquewhite;
 }
-h2{color: green;}
-h3{color: blue;}
+h2{color: midnightblue;}
+h3{color: navy;}
 h4{color: purple;}
 
 p.thick {
