--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body {
   background-color: mistyrose;
 }
-h2{color: midnightblue; }
+h2{color: DarkGrey; }
 h3{color: navy; }
 h4{color: purple; }
 
