--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ h4{color: purple;}
 
 p.thick {
   font-weight: bold;
-    background-color: snow; 
+    background-color: Gray; 
 }
 p.thicker {
   font-weight: 900;
