--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ h4{color: purple;}
 
 p.thick {
   font-weight: bold;
-    background-color: Gray; 
+    background-color: Silver; 
    text-align: center;
 }
 p.thicker {
